{
  "version": 4,
  "terraform_version": "0.12.12",
  "serial": 52,
  "lineage": "78b8d707-c259-9f45-0a52-52767da814f5",
  "resources": [
    {
      "module": "module.eks",
      "mode": "data",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:923247590277:security-group/sg-0326a3b4f8a2f6046",
            "description": "EKS node security groups",
            "filter": null,
            "id": "sg-0326a3b4f8a2f6046",
            "name": "cluster-sg-20191210062342087200000008",
            "tags": {
              "Name": "cluster-sg"
            },
            "vpc_id": "vpc-05f757a5a64828752"
          },
          "depends_on": [
            "data.aws_vpc.eks",
            "module.cluster-sg"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "data",
      "type": "aws_security_group",
      "name": "node",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:923247590277:security-group/sg-06d15556daeba9e15",
            "description": "EKS node security groups",
            "filter": null,
            "id": "sg-06d15556daeba9e15",
            "name": "node-sg-20191210062342087100000006",
            "tags": {
              "Name": "node-sg",
              "kubernetes.io/cluster/chase-eks-test2": "owned"
            },
            "vpc_id": "vpc-05f757a5a64828752"
          },
          "depends_on": [
            "data.aws_vpc.eks",
            "module.node-sg"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "data",
      "type": "aws_vpc",
      "name": "eks",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:923247590277:vpc/vpc-05f757a5a64828752",
            "cidr_block": "10.8.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-02cf8823a2f3c5950",
                "cidr_block": "10.8.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-3e43f159",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05f757a5a64828752",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0dd813cd69db65afa",
            "owner_id": "923247590277",
            "state": "available",
            "tags": {
              "Name": "chase-eks-test2-vpc",
              "kubernetes.io/cluster/chase-eks-test2": "shared"
            }
          },
          "depends_on": [
            "module.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0e17cf766de9d8416",
            "public_dns": "ec2-52-220-66-239.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.220.66.239",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "chase-eks-test2-vpc",
              "kubernetes.io/cluster/chase-eks-test2": "shared"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-08621adccbbf7c25c",
            "public_dns": "ec2-18-140-168-206.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.140.168.206",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "chase-eks-test2-vpc",
              "kubernetes.io/cluster/chase-eks-test2": "shared"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0df786c6b7918da2e",
            "public_dns": "ec2-18-136-58-205.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.136.58.205",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "chase-eks-test2-vpc",
              "kubernetes.io/cluster/chase-eks-test2": "shared"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "igw-03197935a0def432a",
            "owner_id": "923247590277",
            "tags": {
              "Name": "chase-eks-test2-vpc",
              "kubernetes.io/cluster/chase-eks-test2": "shared"
            },
            "vpc_id": "vpc-05f757a5a64828752"
          }
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e17cf766de9d8416",
            "id": "nat-0ead57ea7bd3aee55",
            "network_interface_id": "eni-01f37e8961f132e84",
            "private_ip": "10.8.133.51",
            "public_ip": "52.220.66.239",
            "subnet_id": "subnet-0e687c4ef5dc203f2",
            "tags": {
              "Name": "chase-eks-test2-vpc",
              "kubernetes.io/cluster/chase-eks-test2": "shared"
            }
          },
          "depends_on": [
            "aws_internet_gateway.this",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08621adccbbf7c25c",
            "id": "nat-041828699c767d62a",
            "network_interface_id": "eni-053b75f460e61d770",
            "private_ip": "10.8.140.175",
            "public_ip": "18.140.168.206",
            "subnet_id": "subnet-0e687c4ef5dc203f2",
            "tags": {
              "Name": "chase-eks-test2-vpc",
              "kubernetes.io/cluster/chase-eks-test2": "shared"
            }
          },
          "depends_on": [
            "aws_internet_gateway.this",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0df786c6b7918da2e",
            "id": "nat-04270d1bd076fd104",
            "network_interface_id": "eni-05860cb0d4b10b571",
            "private_ip": "10.8.129.233",
            "public_ip": "18.136.58.205",
            "subnet_id": "subnet-0e687c4ef5dc203f2",
            "tags": {
              "Name": "chase-eks-test2-vpc",
              "kubernetes.io/cluster/chase-eks-test2": "shared"
            }
          },
          "depends_on": [
            "aws_internet_gateway.this",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b5bc83847abf9b4d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0ead57ea7bd3aee55",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b5bc83847abf9b4d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.this",
            "aws_route_table.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05016212f2d1bfb371080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-041828699c767d62a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05016212f2d1bfb37",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.this",
            "aws_route_table.private"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f037ba0a0bb59a3f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-04270d1bd076fd104",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f037ba0a0bb59a3f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.this",
            "aws_route_table.private"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03197935a0def432a",
            "id": "r-rtb-0337229f8ee6d49d91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0337229f8ee6d49d9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.this[0]",
            "aws_route_table.public[0]"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b5bc83847abf9b4d",
            "owner_id": "923247590277",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "chase-eks-test2-vpc",
              "kubernetes.io/cluster/chase-eks-test2": "shared"
            },
            "vpc_id": "vpc-05f757a5a64828752"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05016212f2d1bfb37",
            "owner_id": "923247590277",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "chase-eks-test2-vpc",
              "kubernetes.io/cluster/chase-eks-test2": "shared"
            },
            "vpc_id": "vpc-05f757a5a64828752"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f037ba0a0bb59a3f",
            "owner_id": "923247590277",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "chase-eks-test2-vpc",
              "kubernetes.io/cluster/chase-eks-test2": "shared"
            },
            "vpc_id": "vpc-05f757a5a64828752"
          }
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0337229f8ee6d49d9",
            "owner_id": "923247590277",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "chase-eks-test2-vpc",
              "kubernetes.io/cluster/chase-eks-test2": "shared"
            },
            "vpc_id": "vpc-05f757a5a64828752"
          }
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b277ef5420865f68",
            "route_table_id": "rtb-0b5bc83847abf9b4d",
            "subnet_id": "subnet-03fceca2e495f91d3"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c100ed643b1c617e",
            "route_table_id": "rtb-05016212f2d1bfb37",
            "subnet_id": "subnet-041a078c13c6640f1"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f94f2d67f8d1ef8",
            "route_table_id": "rtb-0f037ba0a0bb59a3f",
            "subnet_id": "subnet-026c2f6a345e9b83c"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eba5d714be8e73ca",
            "route_table_id": "rtb-0337229f8ee6d49d9",
            "subnet_id": "subnet-0e687c4ef5dc203f2"
          },
          "depends_on": [
            "aws_route_table.public[0]",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:923247590277:security-group/sg-0ed15b53e1f2e230b",
            "description": "Security group which is to allow SSH from Bastion",
            "egress": [],
            "id": "sg-0ed15b53e1f2e230b",
            "ingress": [],
            "name": "ssh-sg-20191210062342087100000007",
            "name_prefix": "ssh-sg-",
            "owner_id": "923247590277",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f757a5a64828752"
          }
        }
      ]
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:923247590277:security-group/sg-06d15556daeba9e15",
            "description": "EKS node security groups",
            "egress": [],
            "id": "sg-06d15556daeba9e15",
            "ingress": [],
            "name": "node-sg-20191210062342087100000006",
            "name_prefix": "node-sg-",
            "owner_id": "923247590277",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "node-sg",
              "kubernetes.io/cluster/chase-eks-test2": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f757a5a64828752"
          }
        }
      ]
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:923247590277:security-group/sg-0326a3b4f8a2f6046",
            "description": "EKS node security groups",
            "egress": [],
            "id": "sg-0326a3b4f8a2f6046",
            "ingress": [],
            "name": "cluster-sg-20191210062342087200000008",
            "name_prefix": "cluster-sg-",
            "owner_id": "923247590277",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f757a5a64828752"
          }
        }
      ]
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_rules",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_rules",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_rules",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_self",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_self",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_self",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_source_security_group_id",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_source_security_group_id",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_source_security_group_id",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_rules",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_rules",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_rules",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_self",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_self",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_self",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow EKS Control Plane",
            "from_port": 1025,
            "id": "sgrule-249507410",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06d15556daeba9e15",
            "self": false,
            "source_security_group_id": "sg-0326a3b4f8a2f6046",
            "to_port": 65535,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-2059685378",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0326a3b4f8a2f6046",
            "self": false,
            "source_security_group_id": "sg-06d15556daeba9e15",
            "to_port": 443,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-1720689979",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0ed15b53e1f2e230b",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          }
        }
      ]
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-4076202968",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06d15556daeba9e15",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          }
        }
      ]
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-2397370564",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0326a3b4f8a2f6046",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          }
        }
      ]
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_self",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_self",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_self",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_source_security_group_id",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_source_security_group_id",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_source_security_group_id",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-1291718352",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ed15b53e1f2e230b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": -1,
            "id": "sgrule-141719574",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06d15556daeba9e15",
            "self": true,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:923247590277:subnet/subnet-03fceca2e495f91d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.8.0.0/19",
            "id": "subnet-03fceca2e495f91d3",
            "map_public_ip_on_launch": false,
            "owner_id": "923247590277",
            "tags": {
              "Name": "chase-eks-test2-eks-private",
              "kubernetes.io/cluster/chase-eks-test2": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05f757a5a64828752"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:923247590277:subnet/subnet-041a078c13c6640f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.8.32.0/19",
            "id": "subnet-041a078c13c6640f1",
            "map_public_ip_on_launch": false,
            "owner_id": "923247590277",
            "tags": {
              "Name": "chase-eks-test2-eks-private",
              "kubernetes.io/cluster/chase-eks-test2": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05f757a5a64828752"
          }
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:923247590277:subnet/subnet-026c2f6a345e9b83c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.8.64.0/19",
            "id": "subnet-026c2f6a345e9b83c",
            "map_public_ip_on_launch": false,
            "owner_id": "923247590277",
            "tags": {
              "Name": "chase-eks-test2-eks-private",
              "kubernetes.io/cluster/chase-eks-test2": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05f757a5a64828752"
          }
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:923247590277:subnet/subnet-0e687c4ef5dc203f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.8.128.0/20",
            "id": "subnet-0e687c4ef5dc203f2",
            "map_public_ip_on_launch": true,
            "owner_id": "923247590277",
            "tags": {
              "Name": "chase-eks-test2-eks-public",
              "kubernetes.io/cluster/chase-eks-test2": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05f757a5a64828752"
          }
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:923247590277:vpc/vpc-05f757a5a64828752",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.8.0.0/16",
            "default_network_acl_id": "acl-00a95b40141911e07",
            "default_route_table_id": "rtb-0dd813cd69db65afa",
            "default_security_group_id": "sg-091adeae1ff4353a8",
            "dhcp_options_id": "dopt-3e43f159",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05f757a5a64828752",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0dd813cd69db65afa",
            "owner_id": "923247590277",
            "tags": {
              "Name": "chase-eks-test2-vpc",
              "kubernetes.io/cluster/chase-eks-test2": "shared"
            }
          }
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "apigw",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudtrail",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_agent",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_telemetry",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elasticloadbalancing",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "events",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kms",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "monitoring",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sns",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sqs",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "each": "list",
      "provider": "module.eks.provider.aws"
    }
  ]
}